--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ img.brand-icon-header {
 }
 
 .osh-header-titles {
-  width: 210px;
+  /* width: 210px; burger menu */
+  width: 190px;
   text-shadow: 2px 2px 3px #8B0000;
 }
 
@@ -36,6 +37,10 @@ img.brand-icon-header {
   .osh-header-titles {
     display: none;
   }
+
+  .navbar {
+    margin: 0;
+}
 }
 
 .navbar h1 {
@@ -74,7 +79,8 @@ a.header-brand-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
+  /* width: 80px; this is for the burgermenu */
+  width: 117px;
   height: 75px;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
@@ -82,6 +88,21 @@ a.header-brand-link {
   filter: drop-shadow(4px 4px 3px #8B0000);
   z-index: 20;
   background: none;
+}
+
+button.subscribe-cta {
+  display: flex;
+  padding: 0px 12px;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 1.5px;
+  border-radius: 7px;
+  color: #fff;
+  background: black;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
 .osh-header-menu-btn-burger {
@@ -185,8 +206,7 @@ a.header-links {
 
 /* //FOOTER// */
 .osh-footer {
-  /* position: relative; */
-  position: absolute;
+  position: relative;
   bottom: 0;
   display: flex;
   flex-direction: row;
@@ -275,6 +295,102 @@ img.brand-icon {
 }
 
 /* //end base styles// */
+/* Countdown Timer Styles */
+
+/* App Styles */
+.App {
+  text-align: center;
+}
+
+.content {
+  padding: 20px;
+}
+
+.body-no-header {
+  margin-top: 0;
+}
+
+.all-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+#clockdiv {
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
+  color: #fff;
+  text-align: center;
+  font-size: 2rem;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 7rem;
+  line-height: 3rem;
+}
+
+#clockdiv > div {
+  padding: 10px;
+  display: inline-block;
+  margin: 5px;
+}
+
+#clockdiv div > span {
+  border-radius: 3px;
+  display: inline-block;
+  text-shadow: 2px 2px 3px #252525;
+  color: #ff3503;
+}
+
+.smalltext {
+  padding-top: 5px;
+  font-size: 1rem;
+}
+
+.countdown-titles {
+  margin-bottom: 10px;
+}
+
+p.countdown-title {
+  font-size: 20px;
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  #clockdiv div > span {
+    padding: 25px;
+  }
+}
+
+@media (min-width: 768px) {
+  .body-no-header {
+    margin-top: 10%;
+}
+  #clockdiv {
+    font-size: 8rem;
+    flex-direction: row;
+  }
+  #clockdiv div > span {
+    padding: 35px;
+    width: 200px;
+  }
+  .all-content {
+    display: flex;
+    max-width: 100%;
+    margin: 0 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.osh-footer {
+  position: absolute;
+}
+}
+
+
 
 
 /* //ABOUT PAGEs// */
